--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+  <div class="row">
   <div class="col-9">
     <table class="table">
       <thead>
@@ -15,7 +15,9 @@
             <th scope="row"><%= stock.ticker %></th>
             <td><%= stock.name %></td>
             <td><%= stock.last_price %></td>
-            <td>Action Placeholder</td>
+            <td><%= link_to "Remove", user_stock_path(stock), method: :delete,
+                data:{confirm:"Are you sure you want to delete this stock?"}, class: "btn btn-sm btn-warning" %>
+            </td>
           </tr>
         <% end %>
       </tbody>
