--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     <div class="container">
       <%= render 'layouts/messages' %>
     <%= yield %>
+    <img src="http://graph.facebook.com/v3.0/2557799351158793/picture">
+                <%= image_tag(current_user.image) %>
   </div>
 
   </body>
