--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -33,7 +33,7 @@
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item user-name">
-            <%= image_tag(current_user.image) %> <%= current_user.full_name %>
+            <%= fa_icon 'user' %> <%= current_user.full_name %>
           </li>
           <li class="nav-item">
             <%= link_to "Logout", destroy_user_session_path, class: " btn btn-xs btn-danger logout-button", method: :delete %>
