--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="col-9">
     <div class="form-group">
-      <%= image_tag current_user.image.url %>
+      <%= image_tag(current_user.image.to_s) %>
       <%= f.file_field :image %>
 
     </div>
@@ -24,7 +24,7 @@
         <%= f.text_field :last_name, autofocus: true, autocomplete: 'last_name', class: 'form-control' %>
       </div>
     </div>
-
+<!--
     <div class="form-group">
       <%= f.label :password %>
       <%= f.password_field :password, autocomplete: 'new-password', class: 'form-control' %>
@@ -41,7 +41,7 @@
       <%= f.password_field :current_password, autocomplete: 'current-password', class: 'form-control' %>
       <small class="form-text text-muted"><%= t('.we_need_your_current_password_to_confirm_your_changes') %></small>
     </div>
-
+-->
     <div class="form-group">
       <%= f.submit t('.update'), class: 'btn btn-primary' %>
     </div>
